--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -21,27 +21,26 @@ jobs:
         echo "Changed files: $FILES"  # Imprime os arquivos modificados no log
 
     - name: Apply labels
-      if: env.FILES != ''
       run: |
-        FILES="$FILES"
+        echo "FILES=$FILES"
         echo "Modified files: $FILES"
         LABELS=""
 
-        # Verifica se o nome do arquivo contém 'ios' ou 'android'
-        if echo "$FILES" | grep -i 'ios'; then
-          LABELS="${LABELS}ios,"
-        fi
-        if echo "$FILES" | grep -i 'android'; then
-          LABELS="${LABELS}android,"
-        fi
+        # # Verifica se o nome do arquivo contém 'ios' ou 'android'
+        # if echo "$FILES" | grep -i 'ios'; then
+        #   LABELS="${LABELS}ios,"
+        # fi
+        # if echo "$FILES" | grep -i 'android'; then
+        #   LABELS="${LABELS}android,"
+        # fi
 
-        # Remove a vírgula final, se houver labels
-        if [ -n "$LABELS" ]; then
-          LABELS=$(echo "$LABELS" | sed 's/,$//')
-        fi
+        # # Remove a vírgula final, se houver labels
+        # if [ -n "$LABELS" ]; then
+        #   LABELS=$(echo "$LABELS" | sed 's/,$//')
+        # fi
 
-        # Armazena as labels em um arquivo de ambiente
-        echo "LABELS=$LABELS" >> $GITHUB_ENV
+        # # Armazena as labels em um arquivo de ambiente
+        # echo "LABELS=$LABELS" >> $GITHUB_ENV
 
     - name: Set GitHub labels
       uses: actions/github-script@v6
