--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -22,7 +22,10 @@ jobs:
 
     - name: Apply labels
       run: |
-        echo "FILES=$FILES"
+        git fetch --depth=1
+        FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
+        echo "FILES=$FILES" >> $GITHUB_ENV  # Armazena os arquivos em um arquivo de ambiente
+        echo "Changed files: $FILES"  # Imprime os arquivos modificados no log
 
     - name: Set GitHub labels
       uses: actions/github-script@v6
