--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   apply-labels:
     runs-on: ubuntu-latest
-    continue-on-error: true  # Este job não vai bloquear a pipeline
 
     steps:
     - name: Checkout code
@@ -17,39 +16,52 @@ jobs:
       id: changed_files
       run: |
         git fetch --depth=1
-        echo "::set-output name=files::$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})"
+        FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
+        echo "FILES=$FILES" >> $GITHUB_ENV  # Armazena os arquivos em um arquivo de ambiente
+        echo "Changed files: $FILES"  # Imprime os arquivos modificados no log
 
     - name: Apply labels
-      if: steps.changed_files.outputs.files != ''
-      continue-on-error: true  # Garante que este step específico não falhe a pipeline
+      if: env.FILES != ''
       run: |
-        FILES="${{ steps.changed_files.outputs.files }}"
+        FILES="$FILES"
         echo "Modified files: $FILES"
         LABELS=""
 
         # Verifica se o nome do arquivo contém 'ios' ou 'android'
         if echo "$FILES" | grep -i 'ios'; then
           LABELS="${LABELS}ios,"
+          echo "Found 'ios' in modified files."  # Log para ios
         fi
         if echo "$FILES" | grep -i 'android'; then
           LABELS="${LABELS}android,"
+          echo "Found 'android' in modified files."  # Log para android
         fi
-        
-        # Aplica as labels
+
+        # Remove a vírgula final, se houver labels
         if [ -n "$LABELS" ]; then
-          LABELS=$(echo "$LABELS" | sed 's/,$//')  # Remove a vírgula final
-          gh pr edit ${{ github.event.pull_request.number }} --add-label "$LABELS"
+          LABELS=$(echo "$LABELS" | sed 's/,$//')
         fi
+
+        # Armazena as labels em um arquivo de ambiente
+        echo "LABELS=$LABELS" >> $GITHUB_ENV
+        echo "Labels to be applied: $LABELS"  # Log das labels a serem aplicadas
 
     - name: Set GitHub labels
       uses: actions/github-script@v6
-      continue-on-error: true  # Este step também não bloqueia a pipeline
       with:
         script: |
-          const labels = "${{ steps.apply-labels.outputs.labels }}".split(',');
-          github.rest.issues.addLabels({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            labels: labels
-          })
+          const labels = process.env.LABELS.split(',');
+          const prNumber = context.issue.number;
+
+          if (labels.length > 0 && labels[0] !== "") {
+            // Aplica as labels ao PR
+            await github.rest.issues.addLabels({
+              issue_number: prNumber,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: labels,
+            });
+            console.log(`Labels applied: ${labels}`);  // Log das labels aplicadas
+          } else {
+            console.log("No labels to apply.");  // Log quando não há labels
+          }
