--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -21,10 +21,30 @@ jobs:
         echo "Changed files: $FILES"  # Imprime os arquivos modificados no log
 
     - name: Apply labels
-      if: steps.changed_files.outputs.files != ''
       run: |
-        echo "FILES from previous step: ${{ steps.changed_files.outputs.files }}"
-        # Resto do código...
+        FILES="$FILES"  # Usa a variável de ambiente
+        echo "Modified files: $FILES"
+        LABELS=""
+
+        # Verifica se o nome do arquivo contém 'ios' ou 'android'
+        if echo "$FILES" | grep -i 'ios'; then
+          LABELS="${LABELS}ios,"
+          echo "Found 'ios' in modified files."
+        fi
+        if echo "$FILES" | grep -i 'android'; then
+          LABELS="${LABELS}android,"
+          echo "Found 'android' in modified files."
+        fi
+
+        # Remove a vírgula final, se houver labels
+        if [ -n "$LABELS" ]; then
+          LABELS=$(echo "$LABELS" | sed 's/,$//')
+          echo "Labels to be applied: $LABELS"  # Log das labels a serem aplicadas
+          echo "LABELS=$LABELS" >> $GITHUB_ENV  # Armazena as labels no ambiente
+        else
+          echo "No labels to apply."
+          exit 0  # Saia sem erro se não houver labels
+        fi
 
     - name: Set GitHub labels
       uses: actions/github-script@v6
